# local-chat-messenger

./: README.md  client.py  config.json  faker_wrapper.py  pyproject.toml  server.py
