[project]
name = "local-chat-messenger"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki-oka",email = "55942183+fate7bardiche@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker (>=33.3.1,<34.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
